Fix: page overflow

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .wrapper {
